# music-remover-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
