[package]
name = "music-remover"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }
url = "2.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
